Fix #614