@@ -22,6 +22,16 @@
     </properties>
 
     <build>
+        <plugins>
+            <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+                <compilerArgument>-proc:full</compilerArgument>
+            </configuration>
+            </plugin>
+        </plugins>
+
         <resources>
             <resource>
                 <filtering>false</filtering>
